@@ -5,6 +5,10 @@ use warnings;
 
 use Carp 'croak';
 use Exporter 5.57 'import';
+
+use Encode qw(:fallbacks);
+use PerlIO::encoding;
+
 our @EXPORT_OK = qw/read_binary read_text read_lines write_binary write_text read_dir/;
 
 sub read_binary {
@@ -54,7 +58,7 @@ sub read_text {
 	my $layer = _text_layers($encoding, $crlf);
 	return read_binary($filename) if $layer eq ':raw';
 
-	local $PerlIO::encoding::fallback = 1;
+	local $PerlIO::encoding::fallback = FB_CROAK;
 	open my $fh, "<$layer", $filename or croak "Couldn't open $filename: $!";
 	return do { local $/; <$fh> };
 }
@@ -64,7 +68,7 @@ sub write_text {
 	$encoding ||= 'utf-8';
 	my $layer = _text_layers($encoding, $crlf);
 
-	local $PerlIO::encoding::fallback = 1;
+	local $PerlIO::encoding::fallback = FB_CROAK;
 	open my $fh, ">$layer", $filename or croak "Couldn't open $filename: $!";
 	print $fh $_[1] or croak "Couldn't write to $filename: $!";
 	close $fh or croak "Couldn't write to $filename: $!";
@@ -80,7 +84,7 @@ sub read_lines {
 	$encoding ||= 'utf-8';
 	my $layer = _text_layers($encoding, $crlf);
 
-	local $PerlIO::encoding::fallback = 1;
+	local $PerlIO::encoding::fallback = FB_CROAK;
 	open my $fh, "<$layer", $filename or croak "Couldn't open $filename: $!";
 	return <$fh> if $skip_chomp;
 	my @buf = <$fh>;
