@@ -1,6 +1,7 @@
 Revision history for File-Slurper
 
 {{$NEXT}}
+          Load PerlIO::encoding before localizing $PerlIO::encoding::fallback
 
 0.008     2015-08-31 12:43:05+02:00 Europe/Amsterdam
           Impose scalar context on do/eval/require
